Added about page

--- a/html5up-photon/about.html
+++ b/html5up-photon/about.html
@@ -22,37 +22,46 @@
         <div id="navbar" class="major">
 <!--          <a class="active" href="/index.html#header">Home</a>-->
           <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a>
-          <a class="active" href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a>
           <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a>
-          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/about.html">About</a>
+          <a class="active" href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/about.html">About</a>
         </div>
         <br /><br />
 				<div class="container">
 					<header class="major">
-						<h2>Data Tools</h2>
+						<h2>Datasets</h2>
 					</header>
 <!--					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>-->
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-              <span class="image fit"><a href="https://staging.openjadedata.org/tools/licenses-explorer/"><img src="images/licenses-screenshot.png" alt=""/></a></span>
-							<h3>Mining Licenses Explorer</h3>
-							<p>This dashboard allows you to explore all the individual jade and gems mining licenses and filter by dates, locations, and companies.</p>
-							<ul class="actions">
-								<li><a href="https://openjadedata.org/tools/licenses-explorer/" class="button">Explore</a></li>
-							</ul>
+					<div class="row 100%">
+          <div class="2u 0u$(medium) dataset">
+            &nbsp;
+          </div>
+						<div class="8u 12u$(medium) dataset">
+							<h3>This project attempts to shed light on an industry that is widely misunderstood using the latest data that been released through transparency initiatives.</h3>
+							<p >.</p>
 						</div>
+          </div>
             
+          <div class="row 100%">
+          <div class="2u 0u$(medium) dataset">
+            &nbsp;
+          </div>
+						<div class="8u 12u$(medium) dataset">
+							<h3>Ackowledgements</h3>
+              This website was created with support from the <a href="https://resourcegovernance.org/">Natural Resource Governance Institute</a> and <a href="https://schoolofdata.org/">School of Data</a>.
+						</div>
+          </div>
             
-						<div class="6u 12u$(medium)">
-							<span class="image fit"><a href="http://staging.openjadedata.org/tools/revenues-explorer/"><img src="images/revenues-screenshot.png" alt=""/></a></span>
-							<h3>Revenue Flows Explorer</h3>
-							<p>This interactive visualisation uses sankey diagrams to show the flows of revenues from the jade and gems sector into the national budget.</p>
-							<ul class="actions">
-<!--								<li><a href="#" class="button">Coming Soon</a></li>-->
-                <li><a href="http://staging.openjadedata.org/tools/revenues-explorer/" class="button">Explore</a></li>
-							</ul>
-						</div>
-						</div>
+          <div class="row 100%">
+          <div class="2u 0u$(medium) dataset">
+            &nbsp;
+          </div>
+          <div class="8u 12u$(medium) dataset">
+            <h3>Glossary of terms</h3>
+            <p><strong>EITI:</strong> Extractive Industries Transparency Initiative.</p>
+            <p><strong>Myanmar Gems Enterprise:</strong> State owned enterprise that is reponsible of the jade and gems mining sector.</p>
+          </div>
+        </div>
 					</div>
 				</div>
 			</section>
