--- a/html5up-photon/datasets.html
+++ b/html5up-photon/datasets.html
@@ -21,9 +21,10 @@
 			<section id="three" class="main style1 special lesspadding">
         <div id="navbar" class="major">
 <!--          <a class="active" href="/index.html#header">Home</a>-->
-          <a href="/index.html#three">Data Stories</a>
-          <a href="/tools.html">Data Tools</a>
-          <a class="active" href="/datasets.html">Datasets</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a>
+          <a class="active" href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/about.html">About</a>
         </div>
         <br /><br />
 				<div class="container">
@@ -44,7 +45,9 @@
 							</ul>
 						</div>
           </div>
-            
+          <div class="row 100%">
+            </br></br>
+          </div>
           <div class="row 100%">
           <div class="2u 0u$(medium) dataset">
             &nbsp;
