--- a/html5up-photon/index.html
+++ b/html5up-photon/index.html
@@ -71,12 +71,12 @@
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
 								<h2>Explore the Jade Industry through<br />
-								Data Stories, Data Tools & Datasets</h2>
+                  <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a>, <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a> & <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a></h2>
 							</header>
 							<p>This project attempts to shed light on an industry that is widely misunderstood using the latest data that been released through transparency initiatives.</p>
-							<p><strong>Data Stories</strong> explain particular aspects of the jade industry through data visualisations, analyses, and interviews.</p>
-							<p><strong>Data Tools</strong> illuminate large datasets with explorable dashboards and interactive visualisations.</p>
-							<p><strong>Datasets</strong> let researchers and advanced data users dig into clean, machine-readable data that is ready to use.</p>
+							<p><strong><a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a></strong> explain particular aspects of the jade industry through data visualisations, analyses, and interviews.</p>
+							<p><strong><a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a></strong> illuminate large datasets with explorable dashboards and interactive visualisations.</p>
+              <p><strong><a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a></strong> let researchers and advanced data users dig into clean, machine-readable data that is ready to use.</p>
 						</div>
 					</div>
 				</div>
@@ -86,9 +86,10 @@
 			<section id="three" class="main style1 special lesspadding">
         <div id="navbar" class="major">
 <!--          <a class="active" href="/index.html#header">Home</a>-->
-          <a class="active" href="/index.html#three">Data Stories</a>
-          <a href="/tools.html">Data Tools</a>
-          <a href="/datasets.html">Datasets</a>
+          <a class="active" href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html">Data Tools</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a>
+          <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/about.html">About</a>
         </div>
         <br /><br />
 				<div class="container">
